# python-trial

./: Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: ci.yaml
src/: document_processor_flask_api.py
